# imagine

./: .gitignore  README.md  pyproject.toml  requirements.txt
Imagine.app/Contents/: Info.plist
Imagine.app/Contents/MacOS/: imagine
imagine/: __init__.py  __main__.py
imagine/cli/: __init__.py  main.py
imagine/core/: __init__.py  analyzer.py  config.py  optimizer.py  processor.py  strategy.py
imagine/gui/: __init__.py  app.py  main_window.py
imagine/gui/models/: __init__.py  image_item.py
imagine/gui/utils/: __init__.py  formatters.py  theme.py
imagine/gui/widgets/: __init__.py  image_list.py  progress.py  settings.py
imagine/gui/workers/: __init__.py  optimizer_worker.py
tests/: __init__.py  test_analyzer.py  test_config.py
